fix button posiution mobile

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -6189,6 +6189,11 @@ span.closeGen {
     margin: 0 auto;
   }
   
+.buttonExt {
+ 
+    width: 170px;
+}    
+    
   #loadingMessage {
       width:64%
   }
